# AlienSlayer

./: .gitignore  CMakeLists.txt
Resources/: alienslayer.icns
imgsrc/: alien.piskel  alienslayer.piskel
src/: alien.cpp  alien.h  button.cpp  button.h  error.cpp  error.h  game.cpp  game.h  main.cpp  sound.cpp  sound.h  spritesheet.cpp  spritesheet.h  text.cpp  text.h  update.cpp  util.cpp  util.h
